--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "sketch-assistant": {
     "title": "Chic",
     "description": "Warn if Text Layers are not using Text Styles",
-    "icon": ""
+    "icon": "https://user-images.githubusercontent.com/3832/94002461-35f10400-fd9a-11ea-8624-9fdcb9491f10.png"
   },
   "author": {
     "name": "Ale Muñoz"
