--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "name": "Ale Muñoz"
   },
   "keywords": [
-    "sketch",
-    "sketch files",
     "sketch assistant",
     "public",
+    "organization",
+    "sketch",
     "assistant",
-    "guidelines"
+    "sketch files"
   ],
   "files": [
     "dist"
