Tweak texts for publishing

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "sketch-assistant": {
     "title": "Chic",
-    "description": "Warn if Text Layers are not using Text Styles",
+    "description": "Because your Text Layers need *Style*, baby.",
     "icon": "https://user-images.githubusercontent.com/3832/94002461-35f10400-fd9a-11ea-8624-9fdcb9491f10.png"
   },
   "author": {
