--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "sketch": "dist/sketch.js",
   "license": "MIT",
   "sketch-assistant": {
-    "title": "Chic",
+    "title": "Sans Chic",
     "description": "Because your Text Layers need *Style*, baby.",
     "icon": "https://user-images.githubusercontent.com/3832/94002461-35f10400-fd9a-11ea-8624-9fdcb9491f10.png"
   },
