--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chic-assistant",
   "homepage": "https://github.com/bomberstudios/chic",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "main": "dist/index.js",
   "sketch": "dist/sketch.js",
   "license": "MIT",
@@ -32,18 +32,18 @@
     "package-tarball": "npm run build && npm pack"
   },
   "devDependencies": {
-    "@sketch-hq/sketch-assistant-utils": "6.0.0",
-    "@types/jest": "26.0.4",
-    "@types/node": "14.0.22",
-    "jest": "26.1.0",
-    "node-fetch": ">=2.6.1",
-    "prettier": "2.0.5",
-    "ts-jest": "26.1.2",
-    "typescript": "3.9.6",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.12"
+    "@sketch-hq/sketch-assistant-utils": "6.5.2",
+    "@types/jest": "27.4.1",
+    "@types/node": "17.0.23",
+    "jest": "27.5.1",
+    "node-fetch": "3.2.3",
+    "prettier": "2.6.1",
+    "ts-jest": "27.1.4",
+    "typescript": "4.6.3",
+    "webpack": "5.70.0",
+    "webpack-cli": "4.9.2"
   },
   "dependencies": {
-    "@sketch-hq/sketch-assistant-types": "6.0.0"
+    "@sketch-hq/sketch-assistant-types": "6.5.0"
   }
 }
